# skill-apple-notes-sync

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_MODEL.md  DESIGN_GRAPH.md  IMPLEMENTATION_PLAN.md  INGEST_API.md  INSTALL_FOR_OPENCLAW_USERS.md  OPERATIONS.md  SECURITY_PRIVACY.md
docs/graphs/: architecture.mmd  compatibility.mmd  entities.mmd  sequence.mmd
references/: commands.md
scripts/: install_launchagent.sh  notes_search.sh  render_graphs.sh  run_api.sh  run_watcher.sh  setup_mac_watcher.sh  watcherctl.sh
skill/: SKILL.md
skill/references/: commands.md
src/notes_sync/: __init__.py  api.py  apple_notes.py  diff.py  models.py  openclaw_search.py  qmd_index.py  server.py  state_db.py  utils.py  watcher.py
tests/: test_api.py  test_diff.py  test_openclaw_search.py  test_state_db.py
